--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: credits
 description: A new Flutter package project.
 version: 0.0.1
-homepage:
+homepage: https://github.com/sameteyisan/credits.git
 
 environment:
   sdk: '>=2.18.1 <3.0.0'
@@ -15,6 +15,5 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
-
 
 flutter:
