--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: credits
-description: A new Flutter package project.
+description: Show a simple end credits that includes any type of widgets as you wish.
 version: 0.0.1
 homepage: https://github.com/sameteyisan/credits.git
 
