--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
 name: credits
 description: Show a simple end credits that includes any type of widgets as you wish.
-version: 1.0.1
+version: 1.0.2
 homepage: https://github.com/sameteyisan/credits.git
 
 environment:
-  sdk: '>=3.0.6 <4.0.0'
+  sdk: ^3.7.2
   flutter: ">=1.17.0"
 
 dependencies:
@@ -14,6 +14,6 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
+  flutter_lints: ^5.0.0
 
 flutter:
